sidebar styles fixings on tablet viewports

--- a/client/src/assets/scss/components/cable-attributes-styles.scss
+++ b/client/src/assets/scss/components/cable-attributes-styles.scss
@@ -14,6 +14,20 @@ span.label {
   font-weight: 700;
 }
 
+footer {
+  .el-row {
+    @media screen and (max-width: $break-xs) {
+      text-align: center;
+      padding: 0 3rem;
+      margin-top: 0;
+    }
+    .el-col {
+      @media screen and (max-width: $break-xs) {
+        margin-top: 2rem;
+      }
+    }
+  }
+}
 /*
 * THEMES VARIANT'S
 */
@@ -25,20 +39,20 @@ span.label {
   }
 
   .status-text {
-    color: #FF8282;
+    color: #ff8282;
     &.active-cable {
-      color: #2AA9B7
+      color: #2aa9b7;
     }
   }
 }
 .application.dark {
   p {
-    color: $white-partial
+    color: $white-partial;
   }
   .status-text {
-    color: #FF4E46;
+    color: #ff4e46;
     &.active-cable {
-      color: #57CED8
+      color: #57ced8;
     }
   }
   .el-button {
@@ -51,6 +65,6 @@ span.label {
 
   a,
   .el-col span.label {
-    color: $white-partial
+    color: $white-partial;
   }
 }
