--- a/client/src/assets/scss/components/data-center-styles.scss
+++ b/client/src/assets/scss/components/data-center-styles.scss
@@ -14,6 +14,21 @@ span.label {
   font-weight: 700;
 }
 
+footer {
+  .el-row {
+    @media screen and (max-width: $break-xs) {
+      text-align: center;
+      padding: 0 3rem;
+      margin-top: 0;
+    }
+    .el-col {
+      @media screen and (max-width: $break-xs) {
+        margin-top: 2rem;
+      }
+    }
+  }
+}
+
 /*
 * THEMES VARIANT'S
 */
@@ -30,12 +45,12 @@ span.label {
 }
 .application.dark {
   p {
-    color: $white-partial
+    color: $white-partial;
   }
   .status-text {
-    color: #FF4E46;
+    color: #ff4e46;
     &.active-cable {
-      color: #57CED8
+      color: #57ced8;
     }
   }
   .el-button {
@@ -46,6 +61,6 @@ span.label {
     }
   }
   .el-col span.label {
-    color: $white-partial
+    color: $white-partial;
   }
 }
